--- a/_posts/2025-03-27-多态实现原理（非虚继承）.md
+++ b/_posts/2025-03-27-多态实现原理（非虚继承）.md
@@ -1,10 +1,10 @@
 ---
 layout: page
-tags: c hello cpp
+tags: cpp
 image: /assets/image/5.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
-title: xxxxx
+title: 多态实现原理（非虚继承）
 ---
 
 # 虚函数
