--- a/_posts/2025-03-28-四平方和定理.md
+++ b/_posts/2025-03-28-四平方和定理.md
@@ -1,10 +1,10 @@
 ---
 layout: page
 tags: 数论
-image: /assets/image/13.jpeg
+image: /assets/image/13.png
 description: xxxxxxxxxxxxxxxxxx
 author: pk
-title: 欧几里德定理
+title: 四平方和定理
 ---
 
 # 拉格朗日四平方和定理
