--- a/_posts/2025-04-01-命令模式（Command）.md
+++ b/_posts/2025-04-01-命令模式（Command）.md
@@ -5,7 +5,7 @@ image: /assets/image/35.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 命令模式（Command）
-categories: [aaa, bbb, ccc]
+categories: aaa/bbb/ccc
 ---
 
 # 概述
