--- a/_posts/2025-03-28-四平方和定理.md
+++ b/_posts/2025-03-28-四平方和定理.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 tags: 数论
-image: /assets/image/13.png
+image: /assets/image/13.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 四平方和定理
