--- a/_posts/2025-04-01-命令模式（Command）.md
+++ b/_posts/2025-04-01-命令模式（Command）.md
@@ -5,7 +5,7 @@ image: /assets/image/31.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 命令模式（Command）
-categories: [aaa, bbb, ccc]
+categories: [计算机, 设计模式]
 ---
 
 # 概述
@@ -45,9 +45,9 @@ categories: [aaa, bbb, ccc]
 - Command：命令可调用对象，包含命令需要由哪些人配合，以及如何执行
 
 
-
-# 类图
-
+核心：
+- 将命令本身和命令的接收者封装成对象，命令的发送方、执行者都无需感知命令接收者的存在
+- 命令的接收者以单例的形式存在？？？
 
 
 # 实现
