--- a/_posts/2025-04-01-策略模式（Strategy）.md
+++ b/_posts/2025-04-01-策略模式（Strategy）.md
@@ -5,6 +5,7 @@ image: /assets/image/26.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 策略模式（Strategy）
+categories: [计算机, 设计模式]
 ---
 
 # 概述
