--- a/_posts/2025-04-01-观察者模式（Observer）.md
+++ b/_posts/2025-04-01-观察者模式（Observer）.md
@@ -5,7 +5,7 @@ image: /assets/image/30.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 观察者模式（Observer）
-categories: [aaa]
+categories: [计算机, 设计模式]
 ---
 
 # 概述
