--- a/_posts/2025-04-01-工厂模式（Factory）.md
+++ b/_posts/2025-04-01-工厂模式（Factory）.md
@@ -5,6 +5,7 @@ image: /assets/image/29.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 工厂模式（Factory）
+categories: [计算机, 设计模式]
 ---
 
 # 概述
