--- a/_posts/2025-03-27-滑动窗口.md
+++ b/_posts/2025-03-27-滑动窗口.md
@@ -7,35 +7,12 @@ author: pk
 title: 滑动窗口
 ---
 
-# 概述
 
-**滑动窗口是一种特殊的二分查找问题：** 窗口大小是单调的。
+窗口 == 子数组
 
-## 窗口
+窗口通常维护了某个性质，在滑动过程中，这个性质具有单调性，需要维护这个性质满足某个条件。
 
-窗口本质上就是子数组，无论是实现还是证明都可以从子数组角度考虑。
-
-
-
-窗口通常维护了某个性质，在滑动过程中需要保证维护的性质不会遭到破坏。
-
-
-
-窗口的性质具有单调性是使用滑动窗口的前提。
-
-
-
-## 二分查找
-
-滑动窗口问题都可以通过二分查找方式解决：
-
-- 最小窗口问题：可以转化为 00001111 型二分查找
-- 最大窗口问题：可以转化成 11110000 型二分查找
-
-
-
-滑动窗口时间复杂度为 $O(n)$，二分查找时间复杂度为 $O(nlog(n))$
-
+最小窗口问题可以转化为 00001111 型二分查找，最大窗口问题可以转化成 11110000 型二分查找，但效率低 $O(n)$ to $O(nlog(n))$
 
 
 # 最大窗口
@@ -47,9 +24,9 @@ for(int i = 0, j = 0; i < n; ++i) {
     // 将第 i 个元素添加到窗口里面
     c[s[i] - 'A']++;
     
-    // 添加新元素到窗口后可能会使窗口性质遭到破坏
+    // 添加新元素到窗口后可能会使窗口条件遭到破坏
     while(!check(c)){
-        // 不断地从窗口左侧移出元素，直至窗口性质成立
+        // 不断地从窗口左侧移出元素，直至窗口条件重新成立
         c[s[j++] - 'A']--;
     }
     
@@ -85,3 +62,4 @@ for(int i = 0, j = 0; i < n; ++i) {
 }
 ```
 
+# 练习
