--- a/_posts/2025-03-31-迪杰斯特拉（Dijkstra）.md
+++ b/_posts/2025-03-31-迪杰斯特拉（Dijkstra）.md
@@ -8,18 +8,14 @@ title: 迪杰斯特拉（Dijkstra）
 ---
 
 # Dijkstra
-## 应用场景
 
-求解带权有向图的单源最短路径问题（无向图也是可以的），要求权重值非负
-
-
-## 算法步骤
-开/闭集合：
+## 原理
+求解带权有向图的单源最短路径问题，要求权重值非负。算法步骤：
 - **开集合：** 还未找到最短路径的节点的集合；
 - **闭集合：** 已经找到最短路径的节点的集合；
+- 不断地从开集合中取出距离起点最近的点，将其加入到闭集合当中，并对与该点相邻的点进行松弛操作。
 
-不断地从开集合中取出距离起点最近的点，将其加入到闭集合当中，并对与该点相邻的点进行松弛操作。
-
+## 实现
 ```cpp
 vector<int> dijkstra(const vector<vector<pair<int, int>>> &g, int s) {
     int n = g.size();
@@ -59,7 +55,7 @@ vector<int> dijkstra(const vector<vector<pair<int, int>>> &g, int s) {
 
 节点松弛操作，只是向优先队列中插入新的最短距离，而被替代的旧最短距离并未被删除，这样是否会导致优先队列中的元素越来越多，最终导致效率低下？
 - 不会，松弛是按边松弛的， 松弛次数 < 边的条数
-- 当弹出旧的最短距离时，此时缓冲是没有意义的，借助于 $d > dist[u]$ （也就是 $visited$ 标记数组），直接跳过避免不必要的缓冲
+- 当弹出旧的最短距离时，此时松弛是没有意义的，借助于 $d > dist[u]$ （也就是 $visited$ 标记数组），直接跳过避免不必要的松弛操作
 
 
 贪心的正确性：
@@ -73,13 +69,9 @@ vector<int> dijkstra(const vector<vector<pair<int, int>>> &g, int s) {
 # 最短路径打印
 $dijkstra$ 只是计算出了最短距离，如何输出最短路径呢（任意一条即可）
 
-
-
 ## 关键点
 
 在松弛的时候，记录是 “谁松弛了谁“ 这层关系（也就是最短路径上的前一个节点）
-
-
 
 ## 实现
 
@@ -126,7 +118,8 @@ vector<int> recover(const vector<int> &pre, int e) {
 }
 ```
 ## 练习
-[Leetcode XXX]()
+
+
 
 
 
