--- a/_posts/2025-03-27-多态实现原理（非虚继承）.md
+++ b/_posts/2025-03-27-多态实现原理（非虚继承）.md
@@ -5,7 +5,7 @@ image: /assets/image/1.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 多态实现原理（非虚继承）
-categories: [计算机, C++]
+categories: [计算机, C/C++]
 ---
 
 # 虚函数
@@ -30,42 +30,23 @@ public:
 };
 ```
 
-
-
 纯虚函数：
-
 - 纯虚函数就是只有声明，没有定义的虚函数；以“=0”结尾；
 - 纯虚函数的目的就是：提供一个统一的接口（也可以说是：为所有继承它的类制定统一标准）；
 - 与虚函数不同，无法直接调用纯虚函数，必须通过多态的形式对其进行调用；
 
-
-
 纯虚函数存在的意义
-
 - 制定标准
-
     - 纯虚函数是为程序制定一种标准，只要你继承了它，就必须按照它的标准来，实现它的所有的方法，否则你也是虚拟的；
-
     - 制定标准是为了让所有实现它或继承自它的派生类类全部按同一标准来工作，从而使程序更加通用化，提高程序的可重用性；
-
-
 - 在很多情况下，基类本身生成对象是不合情理的。例如，动物作为一个基类可以派生出老虎、孔雀等子类，但动物本身生成对象明显不合常理；
 - 父类中存在纯虚函数，子类中重写（override）该函数，可实现多态；
 
 
-
 ## 抽象类
-
-
-
 包含纯虚函数的类叫做抽象类，抽象类无法进行实例化。
 
-
-
 必须在派生类中对抽象类中的所有纯虚函数进行重写，否则该类也是一个抽象类。
-
-
-
 
 
 # GDB 调试
@@ -82,7 +63,7 @@ public:
         std::cout << "base1::func2()" << std::endl;
     }
     virtual ~Base1() {
-    std::cout << "base1::~base1()" << std::endl;
+        std::cout << "base1::~base1()" << std::endl;
     }
 private:
     int b1;
@@ -97,7 +78,7 @@ public:
         std::cout << "base2::func4()" << std::endl;
     }
     virtual ~Base2() {
-    std::cout << "base2::~base2()" << std::endl;
+        std::cout << "base2::~base2()" << std::endl;
     }
 private:
     int b2;
@@ -122,7 +103,7 @@ public:
         std::cout << "derive::func6()" << std::endl;
     }
     virtual ~Derive() {
-    std::cout << "derive::~derive()" << std::endl;
+        std::cout << "derive::~derive()" << std::endl;
     }
 private:
     int c;
