--- a/_posts/2025-03-27-多态实现原理（非虚继承）.md
+++ b/_posts/2025-03-27-多态实现原理（非虚继承）.md
@@ -5,7 +5,7 @@ image: /assets/image/1.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 多态实现原理（非虚继承）
-categories: [计算机, C/C++]
+categories: [计算机, CC++]
 ---
 
 # 虚函数
