--- a/_posts/2025-03-31-迪杰斯特拉（Dijkstra）.md
+++ b/_posts/2025-03-31-迪杰斯特拉（Dijkstra）.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-tags: 数据结构与算法 图论
+tags: 图论
 image: /assets/image/21.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 迪杰斯特拉（Dijkstra）
+categories: [计算机, 数据结构与算法]
 ---
 
 # Dijkstra
