--- a/_posts/2025-04-06-两数之和（Two Sum）.md
+++ b/_posts/2025-04-06-两数之和（Two Sum）.md
@@ -4,7 +4,7 @@ tags: 数组
 image: /assets/image/38.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
-title: 拓扑排序（Topo Sort）
+title: 两数之和（Two Sum）
 categories: [计算机, 数据结构与算法]
 ---
 
