--- a/_posts/2025-04-06-单调栈单调队列.md
+++ b/_posts/2025-04-06-单调栈单调队列.md
@@ -4,7 +4,7 @@ tags: 栈队列
 image: /assets/image/36.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
-title: 拓扑排序（Topo Sort）
+title: 单调栈单调队列
 categories: [计算机, 数据结构与算法]
 ---
 
