--- a/_posts/2025-04-06-十大排序.md
+++ b/_posts/2025-04-06-十大排序.md
@@ -4,7 +4,7 @@ tags: 数组
 image: /assets/image/39.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
-title: 拓扑排序（Topo Sort）
+title: 十大排序
 categories: [计算机, 数据结构与算法]
 ---
 
