--- a/_posts/1970-01-01-xxx.md
+++ b/_posts/1970-01-01-xxx.md
@@ -4,7 +4,7 @@ image: /assets/image/0.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 那些说不出来，说出来又怕没人能懂的话
-permalink: /别/点/进/来/有/些/东/西/还/是/不/看/为/好
+permalink: /a/b/c/d/e/f/g/h/i/j/k/l/m/n/o/p/q/r/s/t/u/v/w/x/y/z
 ---
 
 
