--- a/_posts/2025-03-28-乘法逆元.md
+++ b/_posts/2025-03-28-乘法逆元.md
@@ -1,11 +1,11 @@
 ---
 layout: page
-tags: 数据结构与算法 数论
+tags: 数论
 image: /assets/image/7.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 乘法逆元
-categories: [ddd, eee, fff]
+categories: [计算机, 数据结构与算法]
 ---
 
 # 概述
