--- a/_posts/2025-03-28-四平方和定理.md
+++ b/_posts/2025-03-28-四平方和定理.md
@@ -5,6 +5,7 @@ image: /assets/image/15.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 四平方和定理
+categories: [计算机, 数据结构与算法]
 ---
 
 # 拉格朗日四平方和定理
