--- a/_posts/2025-03-28-摩尔投票法.md
+++ b/_posts/2025-03-28-摩尔投票法.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-tags: 数据结构与算法 数论
+tags: 数组
 image: /assets/image/12.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 摩尔投票法
+categories: [计算机, 数据结构与算法]
 ---
 
 # 摩尔投票法
