--- a/_posts/2025-03-28-质因数分解.md
+++ b/_posts/2025-03-28-质因数分解.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-tags: 数据结构与算法 数论
+tags: 数论
 image: /assets/image/17.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 质因数分解
+categories: [计算机, 数据结构与算法]
 ---
 
 # 原理
