--- a/_posts/2025-03-28-剩余定理.md
+++ b/_posts/2025-03-28-剩余定理.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-tags: 数据结构与算法 组合数学 数论
+tags: 组合数学 数论
 image: /assets/image/14.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 剩余定理
+categories: [计算机, 数据结构与算法]
 ---
 
 # 剩余定理
