--- a/_posts/2025-03-28-卢卡斯定理.md
+++ b/_posts/2025-03-28-卢卡斯定理.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-tags: 数据结构与算法 组合数学 数论
+tags: 组合数学 数论
 image: /assets/image/11.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 卢卡斯定理
+categories: [计算机, 数据结构与算法]
 ---
 
 # 卢卡斯定理
