--- a/_posts/2025-03-28-快速幂（Quick Pow）.md
+++ b/_posts/2025-03-28-快速幂（Quick Pow）.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-tags: 数据结构与算法 数论
+tags: 数论
 image: /assets/image/10.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 快速幂（Quick Pow）
+categories: [计算机, 数据结构与算法]
 ---
 
 # 原理
