--- a/_posts/2025-03-28-高精度运算.md
+++ b/_posts/2025-03-28-高精度运算.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-tags: 数据结构与算法 数论
+tags: 数论
 image: /assets/image/8.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 高精度运算
+categories: [计算机, 数据结构与算法]
 ---
 
 # 大数相加
