--- a/_posts/2025-05-19-变参函数.md
+++ b/_posts/2025-05-19-变参函数.md
@@ -1,3 +1,12 @@
+---
+layout: page
+image: /assets/image/54.jpeg
+description: xxxxxxxxxxxxxxxxxx
+author: pk
+title: 变参函数
+categories: [计算机, CC++]
+---
+
 # 初识变参函数
 变参函数基本内容：
 - 就是那个参数列表中有 ... （即，**变参列表**）的函数；
