--- a/_posts/2025-03-27-多态实现原理（虚继承）.md
+++ b/_posts/2025-03-27-多态实现原理（虚继承）.md
@@ -4,7 +4,7 @@ image: /assets/image/2.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 多态实现原理（虚继承）
-categories: [计算机, CC++]
+categories: [计算机, CPP]
 ---
 
 了解以上概念后，非虚继承场景基本就够了。虚继承场景更为复杂，需要了解更多的东西。
