--- a/_posts/2025-05-19-变参函数.md
+++ b/_posts/2025-05-19-变参函数.md
@@ -4,7 +4,7 @@ image: /assets/image/54.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 变参函数
-categories: [计算机, CC++]
+categories: [计算机, CPP]
 ---
 
 # 初识变参函数
