--- a/_posts/2025-03-27-多态实现原理（非虚继承）.md
+++ b/_posts/2025-03-27-多态实现原理（非虚继承）.md
@@ -4,7 +4,7 @@ image: /assets/image/1.jpeg
 description: xxxxxxxxxxxxxxxxxx
 author: pk
 title: 多态实现原理（非虚继承）
-categories: [计算机, CPP]
+categories: [计算机, cpp]
 ---
 
 # 虚函数
